💄 fixed book covers height on homepage

--- a/Front/src/components/Home/News/styles.scss
+++ b/Front/src/components/Home/News/styles.scss
@@ -43,7 +43,6 @@
 
 .home-bookselection__book {
   width: 150px;
-  height: auto;
   margin-bottom: 1rem;
 }
  .home-bookselection__book:hover {
